# visualstduio_learning

./: README.md
chapter0/cp0_demo/: cp0_demo.cpp  cp0_demo.sln  cp0_demo.vcxproj  cp0_demo.vcxproj.filters
chapter1/executable/demo/: demo.sln
chapter1/executable/simple/: network.sln
chapter2/: static_dynamic.vsdx
chapter2/dynamic/simple/: network.sln
chapter3/tank-1990/: tank-1990.sln
chapter3/tank-1990/Debug/: app_state.idb  app_state.lib  engine.idb  engine.lib  objects.idb  objects.lib
chapter3/tank-1990/app_state/: app_state.vcxproj
chapter3/tank-1990/engine/: engine.vcxproj
chapter3/tank-1990/objects/: objects.vcxproj
chapter3/tank-1990/tank-1990/: tank-1990.vcxproj
chapter4/demo/src/: CMakeLists.txt
chapter4/demo/src/libnn/nn/factory_impl/: factory_impl.cpp
chapter4/demo/src/libnn/nn/network_impl/: cnn.h
chapter4/demo/src/libnn/nn_api/: nn_api.h
chapter4/demo/src/network/: researcher.cpp
chapter4/demo_linux/: CMakeLists.txt  CMakeSettings.json
chapter4/demo_linux/src/: CMakeLists.txt
chapter4/demo_linux/src/libnn/nn/: nn.h
chapter4/demo_linux/src/libnn/nn/network_impl/: dnn.h
chapter4/demo_linux/src/libnn/nn_api/: nn_api.cpp  nn_api.h
chapter4/demo_linux/src/network/: researcher.cpp
chapter4_1/helloworld/: helloworld.sln
chapter4_1/helloworld/helloworld/: helloworld.vcxproj  main.cpp
chapter5/: main.cpp
chapter5/SimpleDebug/SimpleDebug/: main.cpp
chapter5/SimpleDebugOk/: SimpleDebug.sln
chapter5/SimpleDebugOk/SimpleDebug/: main.cpp  (+1 more)
demo1/: demo1.sln
demo1/demo1/: demo1.vcxproj
demo2/NETWORK/: NETWORK.sln
(+112 files in other folders)
